# pdf2md-py

./: README.md  pyproject.toml
pdf2md/: __init__.py  cli.py
