[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "Convert PDF to Markdown using Mistral OCR"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
dependencies = [
    "mistralai",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"